2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-04  Gora Mohanty  <gmohanty@cvs.gnome.org>

        * configure.in: Added 'or' (Oriya) to ALL_LINGUAS.

2006-03-12  Mugurel Tudor  <mugurelu@gnome.ro>

	* configure.in: Added ro to ALL_LINGUAS

2006-03-02  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in	Added "eu" (Basque) in ALL_LINGUAS.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2006-01-23  Stanislav Brabec  <sbrabec@suse.cz>

	* nautilus-open-terminal.c: Added missing includes and removed
	obsolete global terminal_file_info declaration.

2006-01-02  Christian Neumair  <chris@gnome-de.org>

	* MAINTAINERS: Add.

2005-12-08  Christian Neumair  <chris@gnome-de.org>

	* configure.in: (ALL_LINGUAS): Add Russian (ru).

== 0.6 "Bar" Release ==

	* configure.in: (ALL_LINGUAS): Add Polish (pl).
	* *: Release.

2005-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add Norwegian bokmål to ALL_LINGUAS.

== 0.5 "Ticky Tock" Release == 

2005-10-02  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-open-terminal.c:
	(nautilus_open_terminal_get_background_items): Add SFTP support for
	background context menu, remove g_print statement.
	* *: Release

2005-09-24  Žygimantas Beručka  <zygis@gnome.org>

	* configure.in: Added "lt" to ALL_LINGUAS.

2005-09-07  Christian Neumair  <chris@gnome-de.org>

	* configure.in: (ALL_LINGUAS): Add Turkish (tr).

2005-09-05  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-08-22  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2005-08-20  Yair Hershkovitz  <yairhr@gmail.com>

	* configure.in: Added "he" to ALL_LINGUAS.

2005-08-04  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.in: Added 'uk' to ALL_LINGUAS.

2005-07-29  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-open-terminal.c: Pass